--- a/style.css
+++ b/style.css
@@ -8,7 +8,13 @@ body {
     align-items: center;
 }
 
+form {
+    margin-top: 35px !important;
+}
+
 h1 {
+    margin-top: 40px;
+    margin-bottom: 40px;
     letter-spacing: 1em;
     color: black;
     font-family: 'Roboco', sans-serif;
@@ -108,9 +114,11 @@ h1 {
 }
 
 .message {
+    margin-top: 40px;
     letter-spacing: 0.5em;
     color: black;
     font-family: 'Roboco', sans-serif;
     font-style: normal;
     font-weight: 600;
+    font-size: 20px;
 }
