--- a/style.css
+++ b/style.css
@@ -8,9 +8,6 @@ body {
     align-items: center;
 }
 
-form {
-    margin-top: 35px !important;
-}
 
 h1 {
     margin-top: 40px;
@@ -121,4 +118,14 @@ h1 {
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
+}
+
+.wrapper {
+    margin-top: 35px !important;
+}
+
+.shoot {
+    background: rgb(24, 216, 98);
+    border: 2px solid    rgb(17, 103, 241);
+    border-radius: 0.3em;
 }
